<resources>
    <string name="app_name">todamoon</string>
    <string name="forgot_pass">
        Forgot password?
    </string>
    <string name="create_acc">
            Don\'t have an Account? <font color="#000080"><b>Sign Up</b></font>
    </string>
    <string name="login_passenger">
            Already have an Account? <font color="#000080"><b>Login</b></font>
    </string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- MULTIFORM    -->
    <string name="step1button">Step1Button</string>
    <string name="step2button">step2Button</string>
    <string name="step3button">step3Button</string>
    <string name="previousButton">previousButton</string>
    <string name="nextButton">nextButton</string>
    <string name="create_a_new_user">CREATE A NEW USER</string>
    <string name="account">Account</string>
    <string name="personal">Personal</string>
    <string name="success">Success</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="other">Tricycle</string>
    <string name="acc">Account</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="position">Position</string>
    <string name="new_user_profile">New User Profile Picture</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="street_name">Street Name</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>

    <!-- Terms and Condition -->
    <string name="account_registration">Account Registration</string>
    <string name="data_collection_and_use">Data Collection and Use</string>
    <string name="data_security">Data Security</string>
    <string name="acceptable_use">Acceptable Use</string>
    <string name="changes_to_terms_and_condition">Changes to terms and condition</string>
    <string name="terms_and_condition_title">Terms and Condition</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>

    <string name="terms_and_condition">

        <p>These terms and conditions outline the rules and regulations for the use of TODAMOON mobile application.
            By registering an account on TODAMOON, you accept these terms and conditions in full.
            If you disagree with any part of these terms and conditions,
            please do not proceed with the registration process.
        </p>

        <b>Account Registration.</b>
        <p>
            By registering an account on [Your App Name], you agree to provide accurate and up-to-date information, including but not limited to:
First Name, Middle Name (optional), Last Name, Age, Address, Barangay, Plate Number (for tricycle operators), Tricycle Number, Email Address, Phone Number, Password.
You are solely responsible for maintaining the confidentiality of your account and password. You agree to accept responsibility for all activities that occur under your account.
You must notify us immediately of any unauthorized use of your account or any other breach of security.

        </p>

        <b>Data Collection and Use.</b>
        <p>
            We collect the personal information you provide during the registration process to create and maintain your account, as well as to provide you with the services offered by TODAMOON.
We may use your personal information to communicate with you regarding your account, updates to our services, promotional offers, and other relevant information.
We will not share your personal information with third parties without your consent, except as required by law or as necessary to provide the services requested by you.

        </p>

        <b>Data Security.</b>
        <p>
            We take reasonable measures to protect the security and confidentiality of your personal information. However, we cannot guarantee that unauthorized access, hacking, data loss, or other breaches will never occur.
You are responsible for keeping your account information secure, including choosing a strong password and not sharing your password with others.

        </p>

        <b>Acceptable Use.</b>
        <p>
            You agree to use TODAMOON in compliance with all applicable laws and regulations.
You agree not to use TODAMOON for any unlawful purpose or in any way that could harm, disable, overburden, or impair our services.
You agree not to attempt to gain unauthorized access to any part of TODAMOON, its servers, or any other systems or networks connected to TODAMOON.

        </p>

        <b>Changes to Terms and Conditions.</b>
        <p>
            We reserve the right to modify or update these terms and conditions at any time without prior notice. The updated terms and conditions will be posted on TODAMOON, and your continued use of the app after any such changes constitutes your acceptance of the new terms and conditions.
        </p>

        <b>Contact Us.</b>
        <p>If you have any questions or concerns about these terms and conditions, please contact us at [Your Contact Information].</p>
    </string>
</resources>