<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Passenger.RegisterPassenger">

    <ImageView
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        android:src="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editLayoutFirstName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="First name"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editFirstNamePassenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editLayoutLastName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="First name"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/editLayoutFirstName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editLastNamePassenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/editLayoutLastName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmailPassenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editLayoutPassowrd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="password_toggle"
        android:layout_below="@+id/editLayoutEmail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPasswordPassenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editLayoutConfirmPass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="password_toggle"
        android:layout_below="@+id/editLayoutEmail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editConfirmPassPassenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_below="@+id/editLayoutConfirmPass"
        android:layout_marginTop="20dp"
        app:backgroundTint="@null"
        android:background="@drawable/button_maroon"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:text="@string/login_passenger"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/maroon"
        android:background="@drawable/ripple_effect_button"
        />

</RelativeLayout>